update: Tighten and center logo-text alignment in KW and Propy boxes

--- a/index.html
+++ b/index.html
@@ -441,6 +441,9 @@
       transform: translateY(-10px);
       text-align: left;
     }
+    .services-affiliates {
+      overflow: hidden;
+    }
   </style>
 </head>
 <body>
@@ -2339,23 +2342,155 @@
         foreclosure_text: "NARからサポートと情報を得る"
       },
       sv: {
-        title: "Lås upp din fastighet i Florida",
-        subtitle: "Kostnadsfri agentmatchning av en licensierad FL-expert + Web3-innovator",
+        title: "Lås upp din Florida-fastighet",
+        subtitle: "Gratis agentmatchning av en licensierad FL-expert + Web3-innovatör",
         name: "Ditt namn",
         email: "Din e-post",
-        type_select: "Köpare, säljare, hyresgäst, uttagare, investerare",
-        please_fill_name_email: "Fyll i ditt namn och e-post innan du skickar.",
-        kw_link: "Hitta din drömhus med",
-        kw_text: "Din betrodda fastighetsmäklarpartner.",
+        type_select: "Köpare, Säljare, Hyresgäst, Hyresvärd, Investerare",
+        type_buyer: "Köpare",
+        type_seller: "Säljare",
+        type_renter: "Hyresgäst",
+        type_landlord: "Hyresvärd",
+        type_investor: "Investerare",
+        details: "Dela gärna några detaljer om dina behov (plats, tidsram, budget, etc.)",
+        dropdown_btn: "Förbättra din matchning",
+        intake_title: "Kundintagsinformation",
+        client_type: "Kundtyp",
+        first_time: "Förstagångs",
+        relocating: "Omlokalisering",
+        contact_prefs: "Kontaktpreferenser",
+        pref_contact_method: "Föredragen kontaktmetod:",
+        phone: "Telefon",
+        text: "SMS",
+        best_time: "Bästa tid att kontakta:",
+        morning: "Morgon",
+        afternoon: "Eftermiddag",
+        evening: "Kväll",
+        weekend: "Helg",
+        phone_number: "Telefonnummer",
+        address: "Nuvarande adress",
+        financial_info: "Finansiell information",
+        income: "Årlig hushållsinkomst",
+        budget_min: "Budget min (kr)",
+        budget_max: "Budget max (kr)",
+        pre_approved: "Förgodkänd för bolån?",
+        yes: "Ja",
+        no: "Nej",
+        in_process: "Under behandling",
+        pre_approval_amount: "Förgodkänt belopp (om tillämpligt)",
+        pref_lender: "Föredragen långivare:",
+        have_lender: "Har en",
+        need_lender: "Behöver rekommendation",
+        timeline: "Tidsram:",
+        immediate: "Omedelbar",
+        "1_3_months": "1-3 månader",
+        "3_6_months": "3-6 månader",
+        "6_plus_months": "6+ månader",
+        financial_notes: "Finansiella bekymmer eller anteckningar",
+        buyers_renters: "För köpare/hyresgäster",
+        property_type: "Fastighetstyp:",
+        single_family: "Enfamiljshus",
+        condo: "Bostadsrätt",
+        townhouse: "Radhus",
+        multi_family: "Flerfamiljshus",
+        commercial: "Kommersiell",
+        land: "Mark",
+        bedrooms: "Sovrum:",
+        "1_bed": "1 sovrum",
+        "2_beds": "2 sovrum",
+        "3_beds": "3 sovrum",
+        "4_beds": "4 sovrum",
+        "5_plus_beds": "5+ sovrum",
+        no_pref_bed: "Ingen preferens",
+        bathrooms: "Badrum:",
+        "1_bath": "1 badrum",
+        "1_5_baths": "1.5 badrum",
+        "2_baths": "2 badrum",
+        "2_5_baths": "2.5 badrum",
+        "3_plus_baths": "3+ badrum",
+        no_pref_bath: "Ingen preferens",
+        square_footage: "Föredragen yta",
+        locations: "Föredragna platser/stadsdelar",
+        must_haves: "Måste-ha-funktioner:",
+        garage: "Garage",
+        basement: "Källare",
+        pool: "Pool",
+        yard: "Gård",
+        main_floor_bed: "Sovrum på bottenvåningen",
+        home_office: "Hemmakontor",
+        open_floor: "Öppen planlösning",
+        updated_kitchen: "Uppdaterat kök",
+        updated_baths: "Uppdaterade badrum",
+        fireplace: "Eldstad",
+        central_ac: "Central luftkonditionering",
+        hardwood: "Hårdträdgolv",
+        move_in_ready: "Inflyttningsklar",
+        fixer_upper: "Renoveringsobjekt OK",
+        other_features: "Andra funktioner",
+        deal_breakers: "Deal Breakers",
+        sellers_landlords: "För säljare/hyresvärdar",
+        property_address: "Fastighetsadress",
+        year_built: "Byggår",
+        bedrooms_input: "Sovrum",
+        bathrooms_input: "Badrum",
+        mortgage_balance: "Bolånesaldo",
+        estimated_value: "Uppskattat värde",
+        sell_reason: "Anledning till försäljning/uthyrning:",
+        upgrading: "Uppgradering",
+        downsizing: "Nedskalning",
+        investment: "Investering",
+        financial: "Finansiell",
+        other_reason: "Annan anledning",
+        sell_timeline: "Tidsram för att sälja/hyra ut:",
+        asap: "Så snart som möjligt",
+        property_condition: "Fastighetens skick:",
+        excellent: "Utmärkt",
+        good: "Bra",
+        fair: "Rimligt",
+        needs_work: "Behöver arbete",
+        upgrades: "Kürzliche upgraderingar/renoveringar",
+        issues: "Kända problem med fastigheten",
+        additional_info: "Ytterligare information",
+        how_heard: "Hur hörde du om oss?",
+        referral: "Rekommendation",
+        website: "Webbplats",
+        social_media: "Sociala medier",
+        sign: "Skylt",
+        online_review: "Online-recension",
+        other_source: "Annan källa",
+        agent_exp: "Tidigare agentupplevelse:",
+        worked_agent: "Arbetat med agent",
+        no_agent: "Ingen agentupplevelse",
+        agent_desc: "Beskriv tidigare agentupplevelse",
+        requests: "Särskilda önskemål eller bekymmer",
+        submit: "Hitta min expertagent nu!",
+        footer: "Drivs av Web3RealtorFL - Kopplar samman fastigheter och blockchain",
+        thank_you: "Tack för att du skickade in! En agent kontaktar dig snart.",
+        ok: "OK",
+        select_language: "Välj ditt föredragna språk",
+        lang_english: "Engelska",
+        lang_spanish: "Spanska",
+        lang_chinese: "Kinesiska",
+        lang_arabic: "Arabiska",
+        lang_russian: "Ryska",
+        lang_portuguese: "Portugisiska",
+        lang_french: "Franska",
+        lang_italian: "Italienska",
+        lang_german: "Tyska",
+        lang_japanese: "Japanska",
+        lang_swedish: "Svenska",
+        submitting: "Skickar...",
+        kw_link: "Hitta ditt drömhem med",
+        kw_text: "Din pålitliga partner inom fastighetsförmedling.",
         propy_link: "Propy",
-        propy_text: "Förenklade fastighets- och titeltransaktioner med blockchain-teknik.",
+        propy_text: "Strömlinjeformade titel- och fastighetstransaktioner med blockchain-teknik.",
         web3_education: "Web3-utbildning:",
         cyrin: "Cyrin",
         updraft: "Updraft",
         your_courses: "Dina kurser",
         web3_text: "Lär dig blockchain för fastigheter.",
         foreclosure_link: "Kostnadsfria försäljnings- och kortförsäljningsresurser",
-        foreclosure_text: "Få hjälp och information från NAR."
+        foreclosure_text: "Få hjälp och info från NAR."
       }
     };
 
@@ -2379,8 +2514,27 @@
       const elements = document.querySelectorAll('[data-lang]');
       elements.forEach(element => {
         const key = element.getAttribute('data-lang');
-        element.textContent = translations[lang][key];
+        const translation = translations[lang][key];
+        
+        if (element.tagName === 'INPUT' || element.tagName === 'TEXTAREA') {
+          // For input and textarea elements, update placeholder
+          element.placeholder = translation || '';
+        } else if (element.tagName === 'SELECT') {
+          // For select elements, update options
+          const options = element.querySelectorAll('option');
+          options.forEach(option => {
+            const optionKey = option.getAttribute('data-lang');
+            if (optionKey) {
+              option.textContent = translations[lang][optionKey] || option.textContent;
+            }
+          });
+        } else {
+          // For other elements, update text content
+          element.textContent = translation || '';
+        }
       });
+
+      // Update selected language display
       document.getElementById('selectedLanguage').value = languageNames[lang];
     }
 
